--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -3532,7 +3532,7 @@
 	});
 	
 	//End Statblock stuff
-	/script>
+</script>
 <input type='hidden' name='attr_dopay' value="init" />
 <input type='text' style='display: none;' name='attr_wdNum' value='1' />
 <!-- Stat Block Fields -->
