--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,4 +1,4 @@
-<input type='hidden' name='attr_character_sheet'/>
+<input type='hidden' name='attr_character_sheet' value="Savage Worlds Tabbed v4.00.01"/>
 <script type="text/worker">
 	// Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
 	
@@ -735,6 +735,7 @@
 			'linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', 
 			'useacademics', 'academics', 'academicsmod', 'academicsCur', 'academicsskill','academicsskill_delta','academicsskillmod','academicsskill_rank','academicsskill_display','academicsskillmod_base', 'academics_skillmod',
 			'showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v) { // have to actually do this in case people have a custom name for Common Knowledge
+				console.log("Beginning getAttrs for 4.0.1")
 				function translateAttScore (attscore) {
 					switch (attscore) {
 						case '(AGL)':
@@ -752,10 +753,6 @@
 					}
 				};
 				console.log("Common-knowledge name: " + v['common-knowledgename']);
-				// acStatMod = v.academicsmod;
-				// acSkillMod = v.academicsskillmod;
-				// acStat = v.academics;
-				// acSkill = v.academicsskill;
 				setattrs({
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
@@ -771,6 +768,7 @@
 					linkedweirdscienceattformula: v.linkedweirdscienceattscoreformula,
 					scholarship: v.academics,                // handled above to avoid asynch issues
 					usescholarship: v.useacademics,
+					useacademics: 0,
 					scholarshipmod: v.academicsmod,          // handled above to avoid asynch issues
 					scholarshipCur: v.academicsCur,
 					academics: v.academicsskill,
@@ -806,7 +804,6 @@
 			setAttrs({initializeStatblock: 'on'});
 		}*/
 		console.log("<===== Begin Sheet Upgrade Conversion Process =====>");
-		console.log("Sheet Version: " + v.character_sheet.slice(22));
 		const version = parseFloat(v.character_sheet.slice(22)) || 0;
 		console.log("Version: " + version);
 		const versionone = parseInt(v.character_sheet.slice(22)) || 0;
@@ -3532,7 +3529,7 @@
 	});
 	
 	//End Statblock stuff
-</script>
+	</script>
 <input type='hidden' name='attr_dopay' value="init" />
 <input type='text' style='display: none;' name='attr_wdNum' value='1' />
 <!-- Stat Block Fields -->
