--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,4 +1,4 @@
-<input type='hidden' name='attr_character_sheet' value="Savage Worlds Tabbed v4.00.01"/>
+<input type='hidden' name='attr_character_sheet' value="Savage Worlds Tabbed v4.00.00"/>
 <script type="text/worker">
 	// Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
 	
@@ -749,10 +749,35 @@
 						case '(VIG)':
 							return 'vig-u';
 						default:
-							return 'error';
+							return attscore;
 					}
 				};
-				console.log("Common-knowledge name: " + v['common-knowledgename']);
+				console.log("Common-knowledge name: " + v['common-knowledgename']);console.log(translateAttScore(v.linkedathleticsatt))
+				console.log(translateAttScore(v.linkedpsionicsatt))
+				console.log(jtranslateAttScore(v.linkedritualattscore))
+				console.log(v.linkedritualattscorebutton)
+				console.log(v.linkedritualattscoreformula)
+				console.log(translateAttScore(v.linkedspellcastingattscore))
+				console.log(v.linkedspellcastingattscorebutton)
+				console.log(v.linkedspellcastingattscoreformula)
+				console.log(translateAttScore(v.linkedweirdscienceattscore))
+				console.log(v.linkedweirdscienceattscorebutton)
+				console.log(v.linkedweirdscienceattscoreformula)
+				console.log(v.academics)
+				console.log(v.useacademics)
+				console.log(v.academicsmod)
+				console.log(v.academicsCur)
+				console.log(v.academicsskill)
+				console.log(v.academicsskill_delta)
+				console.log(v.academicsskillmod)
+				console.log(v.academicsskill_rank)
+				console.log(v.academicsskill_display)
+				console.log(v.academicsskillmod_base)
+				console.log(v.academics_skillmod)
+				console.log(v.showFiMod)
+				console.log(v.fiwilddie)
+				console.log(v.fiwilddieinfo)
+				console.log(v.fiModType)
 				setattrs({
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
