Logging the object
Let's see how this works

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -752,33 +752,34 @@
 							return attscore;
 					}
 				};
-				console.log("Common-knowledge name: " + v['common-knowledgename']);console.log(translateAttScore(v.linkedathleticsatt))
-				console.log(translateAttScore(v.linkedpsionicsatt))
-				console.log(jtranslateAttScore(v.linkedritualattscore))
-				console.log(v.linkedritualattscorebutton)
-				console.log(v.linkedritualattscoreformula)
-				console.log(translateAttScore(v.linkedspellcastingattscore))
-				console.log(v.linkedspellcastingattscorebutton)
-				console.log(v.linkedspellcastingattscoreformula)
-				console.log(translateAttScore(v.linkedweirdscienceattscore))
-				console.log(v.linkedweirdscienceattscorebutton)
-				console.log(v.linkedweirdscienceattscoreformula)
-				console.log(v.academics)
-				console.log(v.useacademics)
-				console.log(v.academicsmod)
-				console.log(v.academicsCur)
-				console.log(v.academicsskill)
-				console.log(v.academicsskill_delta)
-				console.log(v.academicsskillmod)
-				console.log(v.academicsskill_rank)
-				console.log(v.academicsskill_display)
-				console.log(v.academicsskillmod_base)
-				console.log(v.academics_skillmod)
-				console.log(v.showFiMod)
-				console.log(v.fiwilddie)
-				console.log(v.fiwilddieinfo)
-				console.log(v.fiModType)
-				setattrs({
+				console.log("Common-knowledge name: " + v['common-knowledgename']);
+				console.log(translateAttScore(v.linkedathleticsatt));
+				console.log(translateAttScore(v.linkedpsionicsatt));
+				console.log(translateAttScore(v.linkedritualattscore));
+				console.log(v.linkedritualattscorebutton);
+				console.log(v.linkedritualattscoreformula);
+				console.log(translateAttScore(v.linkedspellcastingattscore));
+				console.log(v.linkedspellcastingattscorebutton);
+				console.log(v.linkedspellcastingattscoreformula);
+				console.log(translateAttScore(v.linkedweirdscienceattscore));
+				console.log(v.linkedweirdscienceattscorebutton);
+				console.log(v.linkedweirdscienceattscoreformula);
+				console.log(v.academics);
+				console.log(v.useacademics);
+				console.log(v.academicsmod);
+				console.log(v.academicsCur);
+				console.log(v.academicsskill);
+				console.log(v.academicsskill_delta);
+				console.log(v.academicsskillmod);
+				console.log(v.academicsskill_rank);
+				console.log(v.academicsskill_display);
+				console.log(v.academicsskillmod_base);
+				console.log(v.academics_skillmod);
+				console.log(v.showFiMod);
+				console.log(v.fiwilddie);
+				console.log(v.fiwilddieinfo);
+				console.log(v.fiModType);
+				definedAttrs = {
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
 					linkedpsionicsatt: translateAttScore(v.linkedpsionicsatt),
@@ -807,8 +808,11 @@
 					fightingwilddie: v.fiwilddie,
 					fightingwilddieinfo: v.fiwilddieinfo,
 					fightingModType: v.fiModType
-				});
-				console.log("4.0.1 Attrs set")
+				};
+				console.log(definedAttrs);
+	
+				setattrs(definedAttrs, console.log("4.0.1 Attrs set"));
+				
 				// getSectionIDs("skills", function(idarray) {
 				//     for(var i=0; i < idarray.length; i++) {
 				//        getAttrs([`repeating_skills_$(idarray[i])_linkedotherattrscore`], function(v))
