Deleting undefined keys
Hopefully a fix

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -810,6 +810,8 @@
 					fightingModType: v.fiModType
 				};
 				console.log(definedAttrs);
+				definedAttrs.keys(obj).forEach(key => obj[key] === undefined && delete obj[key]);
+				console.log(definedAttrs);
 	
 				setattrs(definedAttrs, console.log("4.0.1 Attrs set"));
 				
