Reverting extended skills
Not going to mess with repeating attribute editors

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -792,14 +792,14 @@
 					linkedweirdscienceatt: translateAttScore(v.linkedweirdscienceattscore),
 					linkedweirdscienceattbutton: v.linkedweirdscienceattscorebutton,
 					linkedweirdscienceattformula: v.linkedweirdscienceattscoreformula,
-					scholarship: v.academics,                // handled above to avoid asynch issues
+					scholarship: v.academics,
 					usescholarship: v.useacademics,
 					useacademics: 0,
-					scholarshipmod: v.academicsmod,          // handled above to avoid asynch issues
+					scholarshipmod: v.academicsmod,
 					scholarshipCur: v.academicsCur,
 					academics: v.academicsskill,
 					academics_delta: v.academicsskill_delta,
-					academicsmod: v.academicsskillmod,           // handled above to avoid asynch issues
+					academicsmod: v.academicsskillmod,
 					academics_rank: v.academicsskill_rank,
 					academics_display: v.academicsskill_display,
 					academicsmod_base: v.academicsskillmod_base,
@@ -813,7 +813,8 @@
 				definedAttrs.keys(obj).forEach(key => obj[key] === undefined && delete obj[key]);
 				console.log(definedAttrs);
 	
-				setattrs(definedAttrs, console.log("4.0.1 Attrs set"));
+				setattrs(definedAttrs);
+				console.log("4.0.1 Attrs set")
 				
 				// getSectionIDs("skills", function(idarray) {
 				//     for(var i=0; i < idarray.length; i++) {
@@ -5852,8 +5853,8 @@
                                         <input class="sheet-otherskill" type="text" name="attr_SkillName" placeholder="Skill" data-i18n-placeholder="skill" />
 										
 										<div class='sheet-linkedAtt'>
-											<span class='sheet-linkedAttSpan' name="attr_linkedotherattscore" data-i18n-dynamic></span>
-                                            <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(AGL)" />
+											<!-- <span class='sheet-linkedAttSpan' name="attr_linkedotherattscore" data-i18n-dynamic></span> -->
+                                            <input class="sheet-LAA" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(AGL)" />
                                             <input class="sheet-LASm" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SMA)" checked />
                                             <input class="sheet-LASp" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SPI)" />
                                             <input class="sheet-LASt" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(STR)" />
@@ -5862,7 +5863,7 @@
                                             <span class="sheet-LASMA" name='attr_linkedotherattscore' data-i18n="sma-u"></span>
                                             <span class="sheet-LASPI" name='attr_linkedotherattscore' data-i18n="spi-u"></span>
                                             <span class="sheet-LASTR" name='attr_linkedotherattscore' data-i18n="str-u"></span>
-                                            <span class="sheet-LAVIG" name='attr_linkedotherattscore' data-i18n="vig-u"></span> -->
+                                            <span class="sheet-LAVIG" name='attr_linkedotherattscore' data-i18n="vig-u"></span>
                                         </div>
                                         <span class="sheet-attrankselect"><select name="attr_skillnamerank" title="@{repeating_skills_$#_SkillNameRank}" class="sheet-traitdie" value="4">
                                             <option value="4">d4</option>
@@ -5878,11 +5879,11 @@
         						            <span class='sheet-ModDesc' data-i18n="apply-encumbrance">Apply Encumbrance</span></label><br />-->
                 						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
                 						    <select class="sheet-LinkedAttSelect" name="attr_linkedotherattscore"> <!-- Sets the attribute to be used above in the linkedAtt div-->
-                						        <option value="agl-u" data-i18n="agility">Agility</option>
-            									<option value="sma-u" selected data-i18n="smarts">Smarts</option>
-            									<option value="spi-u" data-i18n="spirit">Spirit</option>
-            									<option value="str-u" data-i18n="strength">Strength</option>
-            									<option value="vig-u" data-i18n="vigor">Vigor</option>
+                						        <option value="(AGL)" data-i18n="agility">Agility</option>
+            									<option value="(SMA)" selected data-i18n="smarts">Smarts</option>
+            									<option value="(SPI)" data-i18n="spirit">Spirit</option>
+            									<option value="(STR)" data-i18n="strength">Strength</option>
+            									<option value="(VIG)" data-i18n="vigor">Vigor</option>
                 						    </select>
                 						    <input type='hidden' name='attr_linkedotherattscorebutton' value='@{setmods}' />
                 						    <input type='hidden' name='attr_linkedotherattscoreformula' value='@{ModSum}[Distracted, Wounds, Fatigue]' />
