fixed strong hit for endure harm

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -7976,8 +7976,9 @@
                     <ul>
                         <li>Shake it off: If your health is greater than 0, suffer -1 momentum in exchange for +1
                             health.</li>
-                        <li>Embrace the pain: Take +1 momentum. On a <strong>weak hit,</strong> you press on.</li>
+                        <li>Embrace the pain: Take +1 momentum.</li>
                     </ul>
+                    <p>On a <strong>weak hit,</strong> you press on.</p>
                     <p>On a <strong>miss,</strong> also suffer -1 momentum. If you are at 0 health, you must mark
                         wounded
                         or maimed (if currently unmarked) or roll on the oracle.</p>
@@ -12806,7 +12807,7 @@
                     </div>
                     <div class="oracle-row sheet-oracle-row">
                         <span class="sheet-oracle-roll">17-20</span>
-                        <span class="sheet-oracle-result">Swif</span>
+                        <span class="sheet-oracle-result">t</span>
                     </div>
                     <div class="oracle-row sheet-oracle-row">
                         <span class="sheet-oracle-roll">21-24</span>
