updated endure stress text

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -8050,7 +8050,7 @@
                     <p>On a <strong>weak hit,</strong> you press on.</p>
                     <p>On a <strong>miss,</strong> also suffer -1 momentum. If you are at 0 spirit, you must mark shaken
                         or
-                        corrupted (if currently unmarked) or roll on the following table.</p>
+                        corrupted (if currently unmarked) or roll on the oracle.</p>
                 </div>
                 <div class="sheet-oracle-footer sheet-move-page-footer">Ironsworn - page 95</div>
             </div>
