--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -7917,7 +7917,7 @@
                 <div class="sheet-move-title sheet-move-preview">End the Fight</div>
                 <div class="sheet-move-description">
                     <p><strong><em>Progress Move</em></strong></p>
-                    </p>When <strong>you make a move to take decisive action,</strong> and score a <strong>strong
+                    <p>When <strong>you make a move to take decisive action,</strong> and score a <strong>strong
                         hit,</strong> you may resolve the outcome of this fight. If you do, roll the challenge dice and
                     compare to your progress. Momentum is ignored on this roll.</p>
                     <p>On a <strong>strong hit,</strong> this foe is no longer in the fight. They are killed, out of
