fixed formatting for moves

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -8362,10 +8362,10 @@
                         <li>With stealth or trickery: Roll +shadow.</li>
                         <li>With observation, intuition, or expertise: Roll +wits.</li>
                     </ul>
-                    </p>On a <strong>strong hit,</strong> you delve deeper. Mark progress and <em>Find an
+                    <p>On a <strong>strong hit,</strong> you delve deeper. Mark progress and <em>Find an
                         Opportunity.</em></p>
-                    </p>On a <strong>weak hit,</strong> roll on the following table according to your stat.</p>
-                    </p>On a <strong>miss,</strong> <em>Reveal a Danger.</em></p>
+                    <p>On a <strong>weak hit,</strong> roll on the following table according to your stat.</p>
+                    <p>On a <strong>miss,</strong> <em>Reveal a Danger.</em></p>
                 </div>
                 <div class="sheet-move-table">
                     <div class="sheet-move-delve-row-header">
@@ -8718,9 +8718,9 @@
                         <li>Make an oath: <em>Swear an Iron Vow,</em> and reroll any dice.</li>
                         <li>Ready your next steps: Take +3 momentum.</li>
                     </ul>
-                    </p>On a <strong>weak hit</strong>, you learn from your mistakes. Take 2 experience and clear all
-                    progress.
-                    </p>On a <strong>miss</strong>, you’ve learned the wrong lessons. Take 1 experience and clear all
+                    <p>On a <strong>weak hit</strong>, you learn from your mistakes. Take 2 experience and clear all
+                    progress.</p>
+                    <p>On a <strong>miss</strong>, you’ve learned the wrong lessons. Take 1 experience and clear all
                     progress. Then,
                     envision how you set off on an ill-fated path. </p>
                 </div>
