added default for the sheet

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -52,7 +52,7 @@
     </tr>
 </table>
 <hr class="sheet-nav-top">
-<input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1" value="1" />
+<input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1" value="1" checked/>
 <span class="sheet-page-label sheet-page-label-1">Character Sheet</span>
 
 <input type="radio" class="sheet-pages sheet-page2" name="attr_pagenumber" title="Page 2" value="2" />
