Cleaning up for release

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -752,34 +752,7 @@
 							return attscore;
 					}
 				};
-				console.log("Common-knowledge name: " + v['common-knowledgename']);
-				console.log(translateAttScore(v.linkedathleticsatt));
-				console.log(translateAttScore(v.linkedpsionicsatt));
-				console.log(translateAttScore(v.linkedritualattscore));
-				console.log(v.linkedritualattscorebutton);
-				console.log(v.linkedritualattscoreformula);
-				console.log(translateAttScore(v.linkedspellcastingattscore));
-				console.log(v.linkedspellcastingattscorebutton);
-				console.log(v.linkedspellcastingattscoreformula);
-				console.log(translateAttScore(v.linkedweirdscienceattscore));
-				console.log(v.linkedweirdscienceattscorebutton);
-				console.log(v.linkedweirdscienceattscoreformula);
-				console.log(v.academics);
-				console.log(v.useacademics);
-				console.log(v.academicsmod);
-				console.log(v.academicsCur);
-				console.log(v.academicsskill);
-				console.log(v.academicsskill_delta);
-				console.log(v.academicsskillmod);
-				console.log(v.academicsskill_rank);
-				console.log(v.academicsskill_display);
-				console.log(v.academicsskillmod_base);
-				console.log(v.academics_skillmod);
-				console.log(v.showFiMod);
-				console.log(v.fiwilddie);
-				console.log(v.fiwilddieinfo);
-				console.log(v.fiModType);
-				definedAttrs = {
+				var definedAttrs = {
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
 					linkedpsionicsatt: translateAttScore(v.linkedpsionicsatt),
@@ -810,10 +783,10 @@
 					fightingModType: v.fiModType
 				};
 				console.log(definedAttrs);
-				definedAttrs.keys(obj).forEach(key => obj[key] === undefined && delete obj[key]);
+				Object.keys(definedAttrs).forEach(key => definedAttrs[key] === undefined && delete definedAttrs[key]);
 				console.log(definedAttrs);
 	
-				setattrs(definedAttrs);
+				setAttrs(definedAttrs);
 				console.log("4.0.1 Attrs set")
 				
 				// getSectionIDs("skills", function(idarray) {
@@ -8544,6 +8517,27 @@
 			<!--                     -->
 			<div class="sheet-release">
 				<h3 class='subsectionHeader' data-i18n="release-notes">Release Notes</h3>
+				<!-- Release 4.00.01 -->
+				<label class="sheet-rowlabel">
+			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes40001' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 4.00.01</h4></span>
+				</label>
+				<input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes40001' value='1' checked />
+				<div class='sheet-releasenotes'>
+					<p data-i18n="changes-this-release">
+						Changes this release:
+					</p>
+					<ul>
+						 <li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
+						 <ul>
+							 <li data--i18n="40001-othermiscmod">Fixed a bug where miscellaneous trait and skill modifiers weren't being applied to knowledge/other skills</li>
+						 </ul>
+						 <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
+						 <ul>
+							 <li data--i18n="scholarship-rename">Renamed the academics derived stat to scholarship for both clarity and SWADE-ETU compatibility</li>
+							 <li data--i18n="40001-refactor">Behind the scenes attribute name refactoring</li>
+						</ul>
+					</ul>
+				 </div>
 				<!-- Release 4.00.00 -->
 				<label class="sheet-rowlabel">
 			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes40000' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 4.00.00</h4></span>
