--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -4381,27 +4381,40 @@
 					<div class="cell linear-range">
 						<div class="popup">Range</div>
 						<div class="tooltip">
-						    Distance between shooter and target.<br />
+							Distance between shooter and target.<br />
+							See B372-373
 						</div>
 					</div>
 				    <div class="cell speed">
 						<div class="popup">Speed</div>
 						<div class="tooltip">
 						   (2 mph = 1 yard/second).<br />
-						   Ignore if human like target moving 10 yards or less.
+						   Ignore if human like target moving 10 yards or less.<br />
+						   See B372-373
 						</div>
 					</div>
 				    <div class="cell size">
 						Size Mod
 					</div>
 				    <div class="cell fire-direction">
-						<div class="popup">Direction</div>
+						<div class="popup">Position</div>
 						<div class="tooltip">
-						   Ignore up/down for beam type weapons like lasers.
+							Your vertical position relative to the target.<br />
+							Ignore up/down for beam type weapons like lasers.<br />
+							See <b>FIRING UPWARD AND DOWNWARD</b> B407.<br />
+							Firing downward decreases distance.<br />
+							<i>For every 2 yards <b>above</b> your target, subtract 1 from distance.</i><br />
+							Firing upward increases distance.<br />
+							<i>Example:</i> Distance 40 yards, you are 10 yards <b>above</b> the target, so <b>subtract</b> 5 yards. Final distance is 35 yards.<br />
+							<i>For every 1 yard <b>below</b>> your target, add 1 to distance.</i><br />
+							<i>Example:</i> Distance 40 yards, you are 10 yards <b>below</b> the target, so <b>add</b> 10 yards. Final distance is 50 yards.<br />
 						</div>
 					</div>
 				    <div class="cell fire-up-dwn-distance">
-						Elevation
+						<div class="popup">Elevation</div>
+						<div class="tooltip">
+						   The number of yards you are above or below the target.
+						</div>
 					</div>
 					<div class="cell new-range">
 						Speed/Range
@@ -4428,9 +4441,9 @@
     					</div>
     				    <div class="cell fire-direction">
     					    <select name="attr_firing_direction" title="Macro name: firing_direction">
-    					        <option value="linear">Normal</option>
-    					        <option value="up">Elev. Up</option>
-    					        <option value="dn">Elev. Down</option>
+    					        <option value="linear">Same Height</option>
+    					        <option value="dn">Above Target</option>
+    					        <option value="up">Below Target</option>
     					    </select>
     					</div>
     				    <div class="cell fire-up-dwn-distance">
@@ -5358,7 +5371,7 @@
 		<li>Options tab. New option to show/hide the Original Techniques table and new Revised Techniques table. Show both tables if you want to transfer your current techniques to the new table.</li>
 		<li>Skills Tab. New Revised Technique Table. Options to show/hide old technigue or new technique tables. If old technique table has no rows, then hide old table, show new table.</li>
 		<li>Bugfix: Check when Character Weight is updated on the Bio\Misc tab to also update the Grand Total on the Inventory tab.</li>
-		<li>Various spelling and text updates.</li>
+		<li>Various spelling and text updates. Updated wording and titles for Combat Tolls Range Calculator.</li>
 		<li>Fix display bug with Add to Tracker Roll Template.</li>
 		<li>Grimoire tab. Spells Table. Reduce the size of the Reason for MOD input line to try to prevent wrapping to next line.</li>
 		<li>Quirks and Perks tables. Set default point value of Quirks to -1 and Perks to 1, suggested by Kevin A (ID: 688156).</li>
@@ -6939,8 +6952,8 @@ Skull Damage x4
     
 </div>
 
-<script></script>
-<script type="text/worker">
+<script type="text/worker"></script>
+<script>
 
 	var noop = function () {}; // do nothing.
 
