--- a/Les Chants de Loss/LCDL.html
+++ b/Les Chants de Loss/LCDL.html
@@ -2302,13 +2302,13 @@
 		{{#rollGreater() malus 0}}
 			<div class="line">
 				<div class="lLeftTitle"><b>Malus</b></div>
-				<div class="lRightInput"><b>{{malus}}</b></b></div>
+				<div class="lRightInput"><b>{{malus}}</b></div>
 			</div>
 		{{/rollGreater() malus 0}}
 		{{#^rollTotal() mod 0}}
 			<div class="line">
 				<div class="lLeftTitle"><b>Mod. Divers</b></div>
-				<div class="lRightInput"><b>{{mod}}</b></b></div>
+				<div class="lRightInput"><b>{{mod}}</b></div>
 			</div>
 		{{/^rollTotal() mod 0}}
 		<div class="line"><h3>Total</h3></div>
@@ -2327,11 +2327,11 @@
 		<div class="line top"><h2>{{name}}</h2></div>
 		<div class="line">
 			<div class="lLeftTitle"><b>Puissance</b></div>
-			<div class="lRightInput"><b>{{pu}}</b></b></div>
+			<div class="lRightInput"><b>{{pu}}</b></div>
 		</div>
 		<div class="line">
 			<div class="lLeftTitle"><b>Vitesse</b></div>
-			<div class="lRightInput"><b>{{vitesse}}</b></b></div>
+			<div class="lRightInput"><b>{{vitesse}}</b></div>
 		</div>		
 		{{#assaut}}
 			<div class="line">
