--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -26,6 +26,8 @@
 				<ul>
 					<li>Techniques Table Revised. Points spent on techniques are now totaled correctly. <b>NOTE:</b> When transferring techniques to the revised table, be sure to delete the old technqies, otherwise the total will be wrong.</li>
 					<li>Tecnniques Table Revised. Fix bug where Modifier was not added to the final Technique Skill Level.</li>
+					<li>Quirks/Perks Bugfix. Adding a row did not total the quirks/perks correctly.</li>
+					<li>Repeating Spells, quickly clicking checkboxes prevented correct totals. Using new code provided by GiGs to improve speed.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -5380,6 +5382,8 @@
 	<ul>
 		<li>Techniques Table Revised. Points spent on techniques are now totaled correctly. <b>NOTE:</b> When transferring techniques to the revised table, be sure to delete the old technqies, otherwise the total will be wrong.</li>
 		<li>Tecnniques Table Revised. Fix bug where Modifier was not added to the final Technique Skill Level.</li>
+		<li>Quirks/Perks Bugfix. Adding a row did not total the quirks/perks correctly.</li>
+		<li>Repeating Spells, quickly clicking checkboxes prevented correct totals. Using new code provided by GiGs to improve speed.</li>
 	</ul>
 
 	<h4>Version 2.2.0</h4>
@@ -7829,7 +7833,7 @@ Skull Damage x4
 	});
 
 	// Update the total cost of Perks
-	on('change:repeating_perks:points remove:repeating_perks', function (e) {
+	on('change:repeating_perks remove:repeating_perks', function (e) {
 		sumRepeating('repeating_perks', 'points', function(v) {
 			setAttrs({ advantages_perks: v });
 		});
@@ -7843,7 +7847,7 @@ Skull Damage x4
 	});
 
 	// Update the total cost of Quirks
-	on('change:repeating_quirks:points remove:repeating_quirks', function (e) {
+	on('change:repeating_quirks remove:repeating_quirks', function (e) {
 		sumRepeating('repeating_quirks', 'points', function(v) {
 			setAttrs({ disadvantages_quirks: v });
 		});
